--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>$Title$</title>
 </head>
 <body>
-<h2>안녕하세요</h2>
+$END$
 </body>
 </html>
