이동현 작업

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,14 @@
     <title>$Title$</title>
 </head>
 <body>
+$END Game 1$
+$END Game 1$
+$END Game 1$
 $END Game 2$
+$END Game 2$
+$END Game 3$
+$END Game 3$
+$END Game 4$
+$END Game 4$
 </body>
 </html>
