--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,12 @@
     <title>$Title$</title>
 </head>
 <body>
+$END Game 222$
 $END Game 2$
+$END Game 2$
+$END Game 2$
+$END Game 2$
+$END Game 2$
+$END Game 2222$
 </body>
 </html>
