--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,14 +5,6 @@
     <title>$Title$</title>
 </head>
 <body>
-$END Game 1$
-$END Game 1$
-$END Game 1$
-$END Game 2$
-$END Game 2$
-$END Game 3$
-$END Game 3$
-$END Game 4$
-$END Game 4$
+aaa
 </body>
 </html>
